fix: dropdowns not visible in editor toolbar

--- a/apps/web/src/components/editor/editor.css
+++ b/apps/web/src/components/editor/editor.css
@@ -25,18 +25,12 @@
   z-index: 2;
   background-color: var(--background);
   margin-top: -1px !important;
-  max-height: 45px;
-  overflow: hidden;
 
   -webkit-transition: max-height 500ms linear;
   -moz-transition: max-height 500ms linear;
   -o-transition: max-height 500ms linear;
   -ms-transition: max-height 500ms linear;
   transition: max-height 500ms linear;
-}
-
-.ql-toolbar.ql-snow:hover {
-  max-height: 500px;
 }
 
 .ql-formats {
